added comment lines and remove org specific test copy

--- a/HTML/footer.html
+++ b/HTML/footer.html
@@ -158,18 +158,22 @@
     </div>
 
 
-
+    <!-- 
+        UPDATE THIS 
+        Add the footer logo, footer text and modal text you want hear and relevant links.
+    -->
 
       <footer>
           <div class="margins-container">
-            <img src="https://actionnetwork.org/user_files/user_files/000/079/813/original/ITF_LOGO_WHITE_2021.svg" alt="">
-                    <span class="strap">The ITF fights passionately to improve the working lives of transport workers. We are the voice for nearly 20 million working people across nearly 700 member unions in 150 countries around the world.</span>
+            <img src="" alt="">
+                    <span class="strap">Add a short strapline explaining who you are.</span>
                     <div class="links">
-                                                <a target="_blank" href="https://www.facebook.com/ITFglobal">Facebook</a>
-                                                <a target="_blank" href="https://twitter.com/itfglobalunion"> Twitter</a>
-                                                <a target="_blank" href="https://www.instagram.com/itfglobal/?hl=en"> Instagram</a>
+                                                <a target="_blank" href="https://www.facebook.com">Facebook</a>
+                                                <a target="_blank" href="https://twitter.com"> Twitter</a>
+                                                <a target="_blank" href="https://www.instagram.com/"> Instagram</a>
+                                                <a target="_blank" href=""> Privacy</a>
                                         </div>
-                    <span class="strap">© 2022 International Transport Workers’ Federation. All rights reserved</span>
+                    <span class="strap">&copy; Add your copyright or copyleft lines here as needed.</span>
 
           </div>
       </footer>
@@ -178,7 +182,7 @@
     <div id="modal">
       <div class="card">
           <h2>Are you sure you don't want to subscribe?</h2>
-          <p>Are you sure you don't want to subscribe? We build powerful campaigns that improve the lives of millions of transport workers. But we can only make this change happen with help from thousands of people just like you. Will you subscribe to help win for working people?</p>
+          <p>Explain why people who click no to email, why they should subscribe to your email list.</p>
           <button class="subscribe">Okay, I'll subscribe</button>
           <div class="bottom-group">
             <p class="close-text">If you don't want to hear more about this campaign or our work via email close this prompt:</p>
@@ -188,6 +192,10 @@
 
     </div>
 
+    <!-- 
+        END UPDATE SECTION
+        
+    -->
 
 
     </body>
