--- a/HTML/header.html
+++ b/HTML/header.html
@@ -7,6 +7,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <style>
 
+    /* 
+        UPDATE THIS 
+        - These variables control the fonts and colors used on the template. 
+        - SOON: See the reference image to understand where on the tempalte they correspond to.
+        - Always store any files you need to reference like fonts and logos on Action Network file system.
+    */
 :root {
 	--cta-color: #00353c;
 	--cta-font-color: yellow;
@@ -23,10 +29,10 @@
 	--footer-text-color: #f7f8f8;
 	--logo-width: 350px;
 	--regular-font: Neue_Haas_Unica_;
-	--regular-font-url: https: //actionnetwork.org/user_files/user_files/000/079/809/original/NeueHaasUnica-Regular.woff;
+	--regular-font-url: URL://HERE;
 	--bold-font: Neue_Haas_Unica_Bold;
-	--bold-font-url: https://actionnetwork.org/user_files/user_files/000/079/810/original/NeueHaasUnica-Bold.woff;
-	--logo-url: https://actionnetwork.org/user_files/user_files/000/079/812/original/GLIDER_ITF_WEB_ASSETS_01_Logo_Full_Black.svg;
+	--bold-font-url: URL://HERE;
+	--logo-url: URL://HERE;
 	--footer-logo-width: 200px;
 	--gutter-padding: 48px;
 	--grid-spacing: 40px;
@@ -34,18 +40,20 @@
 
 @font-face {
 	font-family: Neue_Haas_Unica_Bold;
-		src: url('https://actionnetwork.org/user_files/user_files/000/079/810/original/NeueHaasUnica-Bold.woff') format("woff");
+		src: url('URL://HERE') format("woff");
 		font-weight: normal;
 		font-style: normal;
 }
 
 @font-face {
 	font-family: Neue_Haas_Unica_;
-		src: url('https://actionnetwork.org/user_files/user_files/000/079/809/original/NeueHaasUnica-Regular.woff') format("woff");
+		src: url('URL://HERE') format("woff");
 		font-weight: normal;
 		font-style: normal;
 }
 
+    /*      END UPDATE SECTION       */    
+    
 button,
 	input[type="submit"] {
 	cursor: pointer;
@@ -787,8 +795,12 @@ input[name="donation[custom_amount]"] {
 <header class="custom-sa-header">
 <div class="logo-container">
 
-<!-- ADD IN THE URL OF THE LOGO / IMAGE YOU HAVE UPLOADED TO ACTION NETWORK FILE SYSTEM HERE -->
-<img src="https://actionnetwork.org/user_files/user_files/000/079/812/original/GLIDER_ITF_WEB_ASSETS_01_Logo_Full_Black.svg" alt="">
+    <!-- 
+        UPDATE THIS 
+        ADD IN THE URL OF THE LOGO / IMAGE YOU HAVE UPLOADED TO ACTION NETWORK FILE SYSTEM HERE 
+    -->
+<img src="" alt="">
+    <!--        END UPDATE SECTION         -->
 </div>
 </header>
 
