comment for testing values
placeholders

--- a/HTML/header.html
+++ b/HTML/header.html
@@ -14,7 +14,7 @@
         - Always store any files you need to reference like fonts and logos on Action Network file system.
     */
 
-	/* PLACEHOLDERS
+    /* PLACEHOLDERS */
 
 :root {
 	--cta-color: #;
@@ -56,10 +56,9 @@
 		font-style: normal;
 }
 
-*/
 
 /* TESTING: DEFINED VALUES */
-
+/* 
 :root {
 	--cta-color: red;
 	--cta-font-color: yellow;
@@ -78,19 +77,17 @@
 	--error-bg-color: darkred;
 	--light-bg: white;
 	--logo-width: 350px;
-    /* Define the url source of the fonts in the next section (type faces)*/
 	--regular-font: Custom_Font_Regular;
 	--bold-font: Custom_Font_Bold;
-    /* Replace this value in the logo src section*/
 	--logo-url: REPLACE-URL-IN-SRC-OF-LOGO-IMG-ELEMENT;
 	--footer-logo-width: 200px;
 	--gutter-padding: 48px;
 	--grid-spacing: 40px;
 }
-
+  */
 /*Add all the type faces you need - duplicate this code if needed*/
 
-@font-face {
+/* @font-face {
 	font-family: Custom_Font_Bold;
 	src: url('https://actionnetwork.org/user_files/user_files/000/047/745/original/national-2-web-extrabold.woff') format("woff");
 	font-weight: normal;
@@ -103,7 +100,7 @@
     src: var(--regular-font-url);
 	font-weight: normal;
 	font-style: normal;
-}
+} */
 
 
     /*      END UPDATE SECTION       */    
