--- a/HTML/header.html
+++ b/HTML/header.html
@@ -16,7 +16,7 @@
 
     /* PLACEHOLDERS */
 
-:root {
+/* :root {
 	--cta-color: #;
 	--cta-font-color: #;
 	--title-color: #;
@@ -54,7 +54,7 @@
 		src: url('URL-HERE') format("woff");
 		font-weight: normal;
 		font-style: normal;
-}
+} */
 
 
 /* TESTING: DEFINED VALUES */
