define variable for link colour

--- a/HTML/header.html
+++ b/HTML/header.html
@@ -73,6 +73,7 @@
 	--action-meter-color: deepskyblue;
 	--footer-color: lightsteelblue;
 	--footer-text-color: blue;
+	--footer-link-color: pink;
 	--error-font-color: orange;
 	--error-bg-color: darkred;
 	--light-bg: white;
@@ -800,6 +801,10 @@ footer {
 	background: var(--footer-color);
 	display: block;
 	overflow: hidden;
+}
+    
+footer .margins-container a {
+    color: var(--footer-link-color)
 }
 
 footer.fundraising {
